dark mode fix + btn

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -30,6 +30,8 @@
 
     --color-rev: #161616;
 
+    --color-toggle-btn: #acacac;
+
     --color-toggle: #ffffff;
 
   }
@@ -52,6 +54,8 @@
     --color-rev: #ffffff;
 
     --color-toggle: #161616;
+
+    --color-toggle-btn: #ffffff;
 
   }
 
@@ -94,10 +98,10 @@
   }
 
   .toggleButton {
-    background-color: var(--color-rev);
+    background-color: var(--color-toggle-btn);
   }
 
   .bar {
-    background-color: var(--color-progress);
+    background-color: var(--color-rev);
   }
 }
